apps/nodejs-app/manifest/node-login-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-login-deploy
  namespace: node-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-login
  template:
    metadata:
      labels:
        app: node-login
    spec:
      containers:
        - name: node-login
          image: nodejs-app:1.0.0
          ports:
            - containerPort: 3000
