apps/nodejs-app/manifest/node-login-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-login-svc
  namespace: node-web
spec:
  selector:
    app: node-login
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
